Bug 477025 - "Wayland to X recording bridge" is present in the task swicher apparently without any reason
Summary: "Wayland to X recording bridge" is present in the task swicher apparently wit...
Status: RESOLVED FIXED
Alias: None
Product: XWaylandVideoBridge
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 477394 477595 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-14 23:50 UTC by Patrick Silva
Modified: 2023-11-28 10:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (502.76 KB, image/png)
2023-11-14 23:50 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-11-14 23:50:22 UTC
Created attachment 163173 [details]
screenshot

STEPS TO REPRODUCE
1. login
2. open an app
3. press alt+tab and hold all key


OBSERVED RESULT
An item called "Wayland to X recording bridge" is present in the task switcher, apparently without any reason. 
Please see the attached screenshot.

EXPECTED RESULT
"Wayland to X recording bridge" should not be present in the task switcher

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.81.0
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2023-11-15 10:29:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/xwaylandvideobridge/-/merge_requests/22
Comment 2 David Redondo 2023-11-15 10:31:09 UTC
Git commit 9ee3d7a21ee3069e37a205318914f48b2b597eaa by David Redondo.
Committed on 15/11/2023 at 11:24.
Pushed by davidre into branch 'master'.

Also skip the switcher

M  +2    -2    src/contentswindow.cpp

https://invent.kde.org/system/xwaylandvideobridge/-/commit/9ee3d7a21ee3069e37a205318914f48b2b597eaa
Comment 3 Nicolas Fella 2023-11-23 00:12:33 UTC
*** Bug 477394 has been marked as a duplicate of this bug. ***
Comment 4 fanzhuyifan 2023-11-28 05:17:33 UTC
*** Bug 477595 has been marked as a duplicate of this bug. ***
Comment 5 David Redondo 2023-11-28 10:22:38 UTC
*** Bug 477625 has been marked as a duplicate of this bug. ***