Also skip the switcher

BUG:477025